[gd_scene load_steps=7 format=2]

[ext_resource path="res://free-assets/balloon.png" type="Texture" id=1]
[ext_resource path="res://free-assets/fonts/Balsamiq/BalsamiqSans-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/Balloon.gd" type="Script" id=4]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/balloon-cursor.png-70d9df3fcddbcc1075d524121f6b25a0.stex"

[sub_resource type="DynamicFont" id=2]
size = 28
extra_spacing_top = -2
extra_spacing_bottom = -4
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("ControlAnimation:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ControlAnimation:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 50 ), Vector2( 0, 50 ), Vector2( 0, 0 ) ]
}

[node name="Balloon" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlAnimation" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 50.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprites" type="Control" parent="ControlAnimation"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Sprite" parent="ControlAnimation/Sprites"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="BG_Cursor" type="Sprite" parent="ControlAnimation/Sprites"]
modulate = Color( 0, 0, 0, 1 )
texture = SubResource( 1 )

[node name="FG" type="Sprite" parent="ControlAnimation/Sprites"]
scale = Vector2( 0.95, 0.95 )
texture = ExtResource( 1 )

[node name="FG_Cursor" type="Sprite" parent="ControlAnimation/Sprites"]
scale = Vector2( 0.92, 0.92 )
texture = SubResource( 1 )

[node name="Text" type="Label" parent="ControlAnimation"]
margin_left = -500.0
margin_top = -500.0
margin_right = 500.0
margin_bottom = 500.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Text"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 3 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
